Fix bug where bottom of article scrolled behind footer

--- a/.poco/css/poquito.css
+++ b/.poco/css/poquito.css
@@ -15,7 +15,7 @@
   padding-bottom: 10vh;  /* NOTE: Should be same as Footer height */
 }
 
-article{width:80%;}                         
+article{width:80%;height:90vh}                         
 ol li, ul li  {margin-left:1em;}
 p {padding-bottom:1em;}
 footer {width:100%;position:fixed;bottom:0;height:10vh;}
